--- a/Git/DatosUsuarioAndroid/app/src/main/res/values/styles.xml
+++ b/Git/DatosUsuarioAndroid/app/src/main/res/values/styles.xml
@@ -6,8 +6,13 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:colorBackground">@color/colorBackground</item>
-        <item name="android:titleTextColor">@color/titleTextColor</item>
     </style>
+
+    <style name="SiguienteRaised" parent="Theme.AppCompat.Light">
+        <item name="colorButtonNormal">@color/colorAccent</item>
+        <item name="colorControlHighlight">@color/colorRaiced</item>
+        <item name="android:textColor">@color/colorBlanco</item>
+    </style>
+
 
 </resources>
