--- a/Sarahi/CursoAndroid/MaterialDessign/app/src/main/res/values/colors.xml
+++ b/Sarahi/CursoAndroid/MaterialDessign/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#cddc39</color>
-    <color name="colorPrimaryDark">#AFB42B</color>
-    <color name="colorAccent">#212121</color>
+    <color name="colorPrimary">#4d3e42</color>
+    <color name="colorPrimaryDark">#75e2e9</color>
+    <color name="colorAccent">#ee5243</color>
+    <color name="colorBackground">#e3c87b</color>
+    <color name="titleTextColor">#ee5243</color>
 </resources>
