--- a/Git/MaterialDessign/app/src/main/res/layout/activity_main.xml
+++ b/Git/MaterialDessign/app/src/main/res/layout/activity_main.xml
@@ -3,35 +3,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.desarrolloweb.materialdessign.MainActivity"
     android:background="@color/colorPrimaryDark">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hola a Todos!"
-        android:id="@+id/textView"
-        android:layout_marginTop="178dp"
-        style="@style/Base.TextAppearance.AppCompat.Display1"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/titleTextColor" />
+    <include android:id="@+id/miActionBar"
+        layout="@layout/actionbar">
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
+    </include>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnSiguiente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Entrar"
-        android:id="@+id/button"
-        android:layout_marginBottom="78dp"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/colorBackground"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:width="100dp" />
+        android:src="@drawable/estrella"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/rvMascotas"
+        android:layout_alignEnd="@+id/rvMascotas"
+        android:elevation="5dp"/>
+
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvMascotas"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/btnSiguiente">
+
+    </android.support.v7.widget.RecyclerView>
+
+
+
 
 </RelativeLayout>
