--- a/Git/MaterialDessign/app/src/main/res/values/colors.xml
+++ b/Git/MaterialDessign/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#4d3e42</color>
     <color name="colorPrimaryDark">#75e2e9</color>
-    <color name="colorAccent">#ee5243</color>
+    <color name="colorAccent">#FFFF</color>
     <color name="colorBackground">#e3c87b</color>
     <color name="titleTextColor">#ee5243</color>
 </resources>
