--- a/Git/MaterialDessign/app/src/main/res/menu/menu_opciones.xml
+++ b/Git/MaterialDessign/app/src/main/res/menu/menu_opciones.xml
@@ -10,7 +10,11 @@
         android:orderInCategory="101"
         >
     </item>
-
+    <item android:id="@+id/mEnviarNotificaciones"
+        android:title="Enviar Notificaciones"
+        android:orderInCategory="103"
+        >
+    </item>
     <item
         android:id="@+id/mRefresh"
         android:title="Refresh"
